syntax = "proto3";

package haskcore.toolchain;

option java_package = "io.github.numq.haskcore.toolchain";
option java_multiple_files = true;

message ToolchainLocation {
  optional string cabalPath = 1;
  optional string ghcPath = 2;
  optional string stackPath = 3;
}
